design: Fix broken CSS var

--- a/design/css/theme.css
+++ b/design/css/theme.css
@@ -23,7 +23,7 @@
 }
 
 body {
-  background-color: var(--theme-broken-white);
+  background-color: var(--prim-darkest);
 }
 
 html {
